# dailygroove

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: build_and_test.yml  pylint.yml
daily_groove/daily_groove/: asgi.py  settings.py  urls.py  wsgi.py
src/: codecov.yml  conftest.py  manage.py  pytest.ini
src/core/: admin.py  context_processors.py  exceptions.py  permissions.py  sitemaps.py  utils.py
src/core/forms/: base_crispy_form.py  game_detail_form.py  player_invite_form.py  sign_up_form.py  upload_form.py  winner_form.py
src/core/management/commands/: create_test_data.py
src/core/management/commands/tests/: test_create_test_data.py
src/core/middleware/: invite_token_middleware.py
src/core/middleware/tests/: test_invite_token_middleware.py
src/core/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_gamesubmission_round.py  0004_alter_many_to_many_through_player.py  0005_auto_20230722_0042.py  0006_alter_round_submission.py  0007_auto_20240307_0139.py  0008_auto_20241216_1844.py
src/core/models/: __init__.py  factories.py  game.py  game_submission.py  player.py  round.py  submission.py  user.py
src/core/models/tests/: test_player.py  test_round.py  test_user.py
src/core/templates/: account-activation-email.html  crispy-form-card.html  dashboard.html  game-detail.html  manage-game.html  messages.html  new-game.html  player-invite.html  signup.html  uploads.html
src/core/templatetags/: core_tags.py
src/core/tests/: test_admin.py  test_utils.py
src/core/utils/: player_invite.py  utilities.py
src/core/views/: __init__.py  activate.py  dashboard.py  game_view.py  manage_game_view.py  new_game_view.py  player_invite_view.py  sign_up_view.py  uploads.py
src/core/views/tests/: test_activate.py  test_dashboard.py  test_game_detail.py  test_manage_game_view.py  test_new_game_view.py  test_player_invite.py  test_sign_up_view.py  test_uploads.py
src/daily_groove/: settings.py  settings_test.py  urls.py
src/daily_groove/tests/: test_configruation.py
src/static/css/: base.css  login.css  positioning.css  signin.css
src/static/vendors/fa/svgs/solid/: snowplow.svg:Zone.Identifier
src/templates/: 400.html  403.html  404.html  500.html  account_activation_invalid.html  account_activation_sent.html  base.html  dark-mode-toggle.html  error-page.html  robots.txt
src/templates/registration/: logged_out.html  login.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
src/test_utils/: base_view_test.py
src/tests/: test_admin.py
