[tool.poetry]
name = "dailygroove"
version = "0.1.0"
description = "A music guessing game"
authors = ["lekjos <leif@leifkjos.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
mysqlclient = "*"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black= "^23.3.0"
coverage = "*"
django-debug-toolbar = "*"
mixer = "*"
isort = "^5.12.0"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
py_version = 310
src_paths =  ["src"]
include_trailing_comma = true
profile = "black"
default_section = "THIRDPARTY"
known_first_party = ["src"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]